# teleg_google_forms_bot

./: .gitignore  Dockerfile  LICENSE  README.md  celerybeat-schedule.bak  docker-compose.yml  env_dist  main.py  nginx.conf  nginx.conf.example  pyproject.toml  requirements.txt
db/: models.py
docker/: scheduler.sh
src/: config.py
src/classes/: pagination.py
src/handlers/: callbacks.py  commands.py  routes.py
src/utils/: decorators.py  form_parser.py
src/worker/: celery.py  tasks.py
